[gd_scene load_steps=4 format=3 uid="uid://dln5kp6stndbo"]

[ext_resource type="Script" path="res://scenes/projectiles/laser.gd" id="1_cdkeh"]
[ext_resource type="Texture2D" uid="uid://bsdd3s6aqpylm" path="res://graphics/projectiles/blue.png" id="1_j3n2s"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bq3na"]
radius = 4.0
height = 162.0

[node name="Laser" type="Area2D"]
collision_layer = 8
collision_mask = 14
script = ExtResource("1_cdkeh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_j3n2s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_bq3na")

[node name="LaserTTL" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LaserTTL" to="." method="_on_laser_ttl_timeout"]
